modified: layout, updated images, added some text

--- a/book/print.html
+++ b/book/print.html
@@ -89,7 +89,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="crates/crates.html"><strong aria-hidden="true">5.</strong> Library Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="crates/devices/devices.html"><strong aria-hidden="true">5.2.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/devices/vehicles.html"><strong aria-hidden="true">5.2.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="crates/devices/rsu.html"><strong aria-hidden="true">5.2.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="crates/devices/controller.html"><strong aria-hidden="true">5.2.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="crates/models/models.html"><strong aria-hidden="true">5.3.</strong> Models</a></li><li class="chapter-item expanded "><a href="crates/network/network.html"><strong aria-hidden="true">5.4.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/network/resources.html"><strong aria-hidden="true">5.4.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="crates/network/slice.html"><strong aria-hidden="true">5.4.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="crates/network/bs.html"><strong aria-hidden="true">5.4.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="crates/input/input.html"><strong aria-hidden="true">5.5.</strong> Input</a></li><li class="chapter-item expanded "><a href="crates/output/output.html"><strong aria-hidden="true">5.6.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="execs/execs.html"><strong aria-hidden="true">6.</strong> Executables</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="execs/v2x.html"><strong aria-hidden="true">6.1.</strong> V2X</a></li><li class="chapter-item expanded "><a href="execs/links.html"><strong aria-hidden="true">6.2.</strong> Links</a></li></ol></li><li class="chapter-item expanded "><a href="workflow/workflow.html"><strong aria-hidden="true">7.</strong> Workflow</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="crates/crates.html"><strong aria-hidden="true">5.</strong> Library Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="crates/models/models.html"><strong aria-hidden="true">5.2.</strong> Models</a></li><li class="chapter-item expanded "><a href="crates/network/network.html"><strong aria-hidden="true">5.3.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="crates/network/resources.html"><strong aria-hidden="true">5.3.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="crates/network/slice.html"><strong aria-hidden="true">5.3.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="crates/network/bs.html"><strong aria-hidden="true">5.3.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="crates/input/input.html"><strong aria-hidden="true">5.4.</strong> Input</a></li><li class="chapter-item expanded "><a href="crates/output/output.html"><strong aria-hidden="true">5.5.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="execs/execs.html"><strong aria-hidden="true">6.</strong> Executables</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="execs/v2x.html"><strong aria-hidden="true">6.1.</strong> V2X</a></li><li class="chapter-item expanded "><a href="execs/links.html"><strong aria-hidden="true">6.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="execs/fl.html"><strong aria-hidden="true">6.3.</strong> FL</a></li></ol></li><li class="chapter-item expanded "><a href="workflow/workflow.html"><strong aria-hidden="true">7.</strong> Workflow</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -175,7 +175,7 @@
                 <div id="content" class="content">
                     <main>
                         <p align="center">
-    <img style="max-width: 65%; max-height: 40%;" src="./resources/images/intro/disolv_logo.svg"
+    <img style="max-width: 80%; max-height: 60%;" src="./resources/images/intro/disolv_logo.svg"
 </p>
 <p>Disolv stands for Dataflow-centric Integrated Simulator Of Large-scale VANETs.
 Disolv is implemented in Rust to enable large scale simulation studies of connected traffic applications.
@@ -291,7 +291,7 @@ A typical VANET simulator can be imagined to be a combination of high-fidelity m
 The problem under study constitutes the application.
 Together, the architecture looks as shown below:</p>
 <p align="center">
-  <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/vanet_sim.png">
+  <img style="max-width: 55%; height: auto;" src="design/../resources/images/design/vanet_sim.png">
 </p>
 <p>This is how any VANET simulator such as Veins is modeled.</p>
 <p>The primary goal of Disolv is to support large-scale evaluation of VANET studies.
@@ -300,7 +300,7 @@ We morph the above simulator idea into an ITS simulator with applications taking
 There will be mobility and network components, but they are not the main focus of the modeling.
 Hence, Disolv conceptually looks as shown below:</p>
 <p align="center">
-  <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/sim_concept.png">
+  <img style="max-width: 55%; height: auto;" src="design/../resources/images/design/sim_concept.png">
 </p>
 <p>How we reach from the VANET simulator to ITS simulator is the main focus of this section.
 Several design aspects are incorporated to achieve this and we will look at them in detail.</p>
@@ -343,7 +343,7 @@ Any mobility simulator output can be converted to Disolv-readable format.
 As of now, SUMO is supported.
 This has an advantage of feeding a real-world mobility data as an input to the simulator.</p>
 <p align="center">
-  <img style="max-width: 45%; height: auto;" src="design/../resources/images/design/mobility-pre.png">
+  <img style="max-width: 75%; height: auto;" src="design/../resources/images/design/mobility-pre.png">
 </p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="links"><a class="header" href="#links">Links</a></h1>
 <p>The next important component after Mobility is the connectivity.
@@ -506,18 +506,6 @@ Additional device-specific configuration is allowed through parameterization.</p
 It is sufficient to know the <strong>Core</strong> and the <strong>Model</strong> to handle input and output operations.
 As a result, the implementations are accessible to all the custom implementations of the agents.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="core-1"><a class="header" href="#core-1">Core</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="devices"><a class="header" href="#devices">Devices</a></h1>
-<div style="break-before: page; page-break-before: always;"></div><h3 id="vehicles"><a class="header" href="#vehicles">Vehicles</a></h3>
-<p>Vehicles are the primary <em>consumers</em> of a majority of ITS applications.
-They can also act as providers of valuable input data for some of the traffic management applications.
-They can communicate with neighbouring vehicles and the infrastructure within a certain range.</p>
-<div style="break-before: page; page-break-before: always;"></div><h3 id="road-side-units"><a class="header" href="#road-side-units">Road-side Units</a></h3>
-<p>Road Side Unit (RSU) is an ITS infrastructure component installed at strategies locations.
-From the perspective of VANET, a vehicle and RSU has similar radio capabilities but serve different purposes.</p>
-<div style="break-before: page; page-break-before: always;"></div><h3 id="controller"><a class="header" href="#controller">Controller</a></h3>
-<p>This is a virtual component analogoous to the traffic management centre in the real world.
-It is possible that a large city can have multiple hierarchies of control centres.
-It serves the vehicles with their requests and takes decisions on traffic management based on the collected data.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="agent-models"><a class="header" href="#agent-models">Agent Models</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="network"><a class="header" href="#network">Network</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="resources"><a class="header" href="#resources">Resources</a></h1>
@@ -531,7 +519,11 @@ The services offered to the devices in the vicinity depends on the Base Station.
 <div style="break-before: page; page-break-before: always;"></div><h1 id="output"><a class="header" href="#output">Output</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="executables-1"><a class="header" href="#executables-1">Executables</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="v2x"><a class="header" href="#v2x">V2X</a></h1>
+<p>This executable runs the V2X scenarios.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="links-2"><a class="header" href="#links-2">Links</a></h1>
+<p>This is used to generate the link files as an input to the simulator.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="fl"><a class="header" href="#fl">FL</a></h1>
+<p>This executable runs the Federated Learning scenarios.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="workflow"><a class="header" href="#workflow">Workflow</a></h1>
 
                     </main>
