--- a/book/execs/fl.html
+++ b/book/execs/fl.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>RSU - Disolv Documentation</title>
+        <title>FL - Disolv Documentation</title>
 
 
         <!-- Custom HTML head -->
@@ -12,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../../favicon.svg">
-        <link rel="shortcut icon" href="../../favicon.png">
-        <link rel="stylesheet" href="../../css/variables.css">
-        <link rel="stylesheet" href="../../css/general.css">
-        <link rel="stylesheet" href="../../css/chrome.css">
-        <link rel="stylesheet" href="../../css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../../fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../../highlight.css">
-        <link rel="stylesheet" href="../../tomorrow-night.css">
-        <link rel="stylesheet" href="../../ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../../";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -88,7 +88,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../../design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="../../design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="../../design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="../../design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="../../design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="../../decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="../../decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="../../crates/crates.html"><strong aria-hidden="true">5.</strong> Library Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../crates/core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="../../crates/devices/devices.html"><strong aria-hidden="true">5.2.</strong> Devices</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../crates/devices/vehicles.html"><strong aria-hidden="true">5.2.1.</strong> Vehicles</a></li><li class="chapter-item expanded "><a href="../../crates/devices/rsu.html" class="active"><strong aria-hidden="true">5.2.2.</strong> RSU</a></li><li class="chapter-item expanded "><a href="../../crates/devices/controller.html"><strong aria-hidden="true">5.2.3.</strong> Controller</a></li></ol></li><li class="chapter-item expanded "><a href="../../crates/models/models.html"><strong aria-hidden="true">5.3.</strong> Models</a></li><li class="chapter-item expanded "><a href="../../crates/network/network.html"><strong aria-hidden="true">5.4.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../crates/network/resources.html"><strong aria-hidden="true">5.4.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../../crates/network/slice.html"><strong aria-hidden="true">5.4.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../../crates/network/bs.html"><strong aria-hidden="true">5.4.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../../crates/input/input.html"><strong aria-hidden="true">5.5.</strong> Input</a></li><li class="chapter-item expanded "><a href="../../crates/output/output.html"><strong aria-hidden="true">5.6.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="../../execs/execs.html"><strong aria-hidden="true">6.</strong> Executables</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../execs/v2x.html"><strong aria-hidden="true">6.1.</strong> V2X</a></li><li class="chapter-item expanded "><a href="../../execs/links.html"><strong aria-hidden="true">6.2.</strong> Links</a></li></ol></li><li class="chapter-item expanded "><a href="../../workflow/workflow.html"><strong aria-hidden="true">7.</strong> Workflow</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../introduction.html">Introduction</a></li><li class="chapter-item expanded "><a href="../installation/installation.html"><strong aria-hidden="true">1.</strong> Installation</a></li><li class="chapter-item expanded "><a href="../basics/basics.html"><strong aria-hidden="true">2.</strong> Basics</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../basics/simulations.html"><strong aria-hidden="true">2.1.</strong> Simulation</a></li><li class="chapter-item expanded "><a href="../basics/vanet.html"><strong aria-hidden="true">2.2.</strong> VANET</a></li></ol></li><li class="chapter-item expanded "><a href="../design/design.html"><strong aria-hidden="true">3.</strong> Why Disolv?</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../design/mobility.html"><strong aria-hidden="true">3.1.</strong> Mobility</a></li><li class="chapter-item expanded "><a href="../design/links.html"><strong aria-hidden="true">3.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="../design/streams.html"><strong aria-hidden="true">3.3.</strong> Streams</a></li><li class="chapter-item expanded "><a href="../design/messages.html"><strong aria-hidden="true">3.4.</strong> Messages</a></li><li class="chapter-item expanded "><a href="../design/discrete.html"><strong aria-hidden="true">3.5.</strong> Discrete-time</a></li></ol></li><li class="chapter-item expanded "><a href="../decisions/decisions.html"><strong aria-hidden="true">4.</strong> Software decisions</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../decisions/software.html"><strong aria-hidden="true">4.1.</strong> Software</a></li><li class="chapter-item expanded "><a href="../decisions/architecture.html"><strong aria-hidden="true">4.2.</strong> Architecture</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/crates.html"><strong aria-hidden="true">5.</strong> Library Crates</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../crates/core/core.html"><strong aria-hidden="true">5.1.</strong> Core</a></li><li class="chapter-item expanded "><a href="../crates/models/models.html"><strong aria-hidden="true">5.2.</strong> Models</a></li><li class="chapter-item expanded "><a href="../crates/network/network.html"><strong aria-hidden="true">5.3.</strong> Network</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../crates/network/resources.html"><strong aria-hidden="true">5.3.1.</strong> Resources</a></li><li class="chapter-item expanded "><a href="../crates/network/slice.html"><strong aria-hidden="true">5.3.2.</strong> Slice</a></li><li class="chapter-item expanded "><a href="../crates/network/bs.html"><strong aria-hidden="true">5.3.3.</strong> Base Station</a></li></ol></li><li class="chapter-item expanded "><a href="../crates/input/input.html"><strong aria-hidden="true">5.4.</strong> Input</a></li><li class="chapter-item expanded "><a href="../crates/output/output.html"><strong aria-hidden="true">5.5.</strong> Output</a></li></ol></li><li class="chapter-item expanded "><a href="../execs/execs.html"><strong aria-hidden="true">6.</strong> Executables</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../execs/v2x.html"><strong aria-hidden="true">6.1.</strong> V2X</a></li><li class="chapter-item expanded "><a href="../execs/links.html"><strong aria-hidden="true">6.2.</strong> Links</a></li><li class="chapter-item expanded "><a href="../execs/fl.html" class="active"><strong aria-hidden="true">6.3.</strong> FL</a></li></ol></li><li class="chapter-item expanded "><a href="../workflow/workflow.html"><strong aria-hidden="true">7.</strong> Workflow</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -144,7 +144,7 @@
                     <h1 class="menu-title">Disolv Documentation</h1>
 
                     <div class="right-buttons">
-                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -173,19 +173,18 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="road-side-units"><a class="header" href="#road-side-units">Road-side Units</a></h3>
-<p>Road Side Unit (RSU) is an ITS infrastructure component installed at strategies locations.
-From the perspective of VANET, a vehicle and RSU has similar radio capabilities but serve different purposes.</p>
+                        <h1 id="fl"><a class="header" href="#fl">FL</a></h1>
+<p>This executable runs the Federated Learning scenarios.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../crates/devices/vehicles.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../execs/links.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../../crates/devices/controller.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../workflow/workflow.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -195,11 +194,11 @@ From the perspective of VANET, a vehicle and RSU has similar radio capabilities 
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../crates/devices/vehicles.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../execs/links.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../../crates/devices/controller.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../workflow/workflow.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -230,13 +229,13 @@ From the perspective of VANET, a vehicle and RSU has similar radio capabilities 
         </script>
 
 
-        <script src="../../elasticlunr.min.js"></script>
-        <script src="../../mark.min.js"></script>
-        <script src="../../searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="../../clipboard.min.js"></script>
-        <script src="../../highlight.js"></script>
-        <script src="../../book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
